# grav_proc_unit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.orig
inc/glad/: glad.h
inc/gpu/: cl.hpp  gl.hpp  glm.hpp
src/: backend.hpp  buffer.cpp  buffer.hpp  cl_util.cpp  cl_util.hpp  consts.hpp  gen_rand.cpp  gen_rand.hpp  gl_util.cpp  gl_util.hpp  grav_proc_unit.cpp  grav_proc_unit.hpp  kernels.cpp  kernels.hpp  log.hpp  main.cpp  options.cpp  options.hpp  particle_gen.cpp  particle_gen.hpp  program.cpp  program.hpp  shaders.cpp  shaders.hpp  uniforms.cpp  uniforms.hpp
src/backends/: base.cpp  base.hpp  basic.cpp  basic.hpp  gpu.cpp  gpu.hpp
src/kernels/: grav_rk4.cl
src/shaders/: star.fsh  star.vsh
test/: cl.cpp  misc.cpp  random.cpp  render.cpp  vecAdd.cl
